docs: import useFieldActions

--- a/src/components/list/Docs.mdx
+++ b/src/components/list/Docs.mdx
@@ -354,7 +354,7 @@ const RemoveButton = ({ remove }: RemoveButtonProps) => (
 <Example of={ListStories.ProgrammaticallySetValue} >
 
 ```tsx
-import { fieldAtom, InputField } from "form-atoms";
+import { fieldAtom, InputField, useFieldActions } from "form-atoms";
 import { listField, List, type AddButtonProps } from "@form-atoms/list-atom";
 
 const environmentListAtom = listAtom({
