--- a/src/components/list/Docs.mdx
+++ b/src/components/list/Docs.mdx
@@ -451,3 +451,81 @@ const RemoveButton = ({ remove }: RemoveButtonProps) => (
 ```
 
 </Example>
+
+<Example of={ListStories.ValidateAscendingValues} >
+
+```tsx
+import { fieldAtom, InputField } from "form-atoms";
+import { List, listAtom } from "@form-atoms/list-atom";
+
+const levels = listAtom({
+  value: [],
+  name: "levels",
+  fields: ({ level }) => ({ level: fieldAtom<number>({ value: level }) }),
+  validate: ({ value }) => {
+    const errors: string[] = [];
+
+    if (1 < value.length) {
+      let [current] = value;
+
+      value.forEach((value, index) => {
+        if (index === 0) {
+          return;
+        }
+
+        if (value.level <= current!.level) {
+          errors.push(
+            `Level at index ${index} must greater than the previous.`,
+          );
+        }
+
+        current = value;
+      });
+    }
+
+    return errors;
+  },
+});
+
+const Example = () => (
+  <>
+    <List atom={levels} initialValue={[10, 30, 20].map((level) => ({ level }))}>
+      {({ fields, moveUp, moveDown, RemoveButton }) => (
+        <div
+          style={{
+            display: "grid",
+            gridGap: 16,
+            gridTemplateColumns: "auto min-content min-content min-content",
+          }}
+        >
+          <InputField atom={fields.level} component="input" />
+          <button type="button" className="outline" onClick={moveUp}>
+            Up
+          </button>
+          <button type="button" className="outline" onClick={moveDown}>
+            Down
+          </button>
+          <RemoveButton />
+        </div>
+      )}
+    </List>
+    <FieldErrors atom={levels} />
+  </>
+);
+
+const FieldErrors = ({ atom }: { atom: FieldAtom<any> }) => {
+  const errors = useFieldErrors(atom);
+
+  return (
+    <>
+      {errors.map((error, index) => (
+        <p key={index} style={{ color: "var(--pico-color-red-550)" }}>
+          {error}
+        </p>
+      ))}
+    </>
+  );
+};
+```
+
+</Example>
