docs(useListActions): demo with free position add button

--- a/src/components/list/Docs.mdx
+++ b/src/components/list/Docs.mdx
@@ -149,6 +149,71 @@ const Example = () => (
 
 </Example>
 
+<Example of={ListStories.PositioningAddButton} >
+
+```tsx
+import { type FieldAtom, fieldAtom, InputField } from "form-atoms";
+import { List, listField, useListActions } from "@form-atoms/list-atom";
+
+const atom = listAtom({
+  name: "productFeatures",
+  value: [{ feature: "quality materials" }, { feature: "solid build" }],
+  fields: ({ feature }) => ({ feature: fieldAtom({ value: feature }) }),
+});
+
+const Example = () => {
+  /* The useListAction hook enables you to control the listAtom from outside the List component */
+  const listActions = useListActions(atom);
+
+  const FreePositionAddButton = () => (
+    <button className="outline" onClick={() => listActions.add()}>
+      Add
+    </button>
+  );
+
+  return (
+    <List
+      atom={atom}
+      AddButton={() => <></>}
+      RemoveButton={RemoveButton}
+      Empty={() => {
+        return (
+          <article style={{ textAlign: "center" }}>
+            <p>
+              You don't have any items in your list. Start by adding your first
+              one.
+            </p>
+            <FreePositionAddButton />
+          </article>
+        );
+      }}
+    >
+      {({ fields, RemoveButton, index, count }) => (
+        <div
+          style={{
+            display: "grid",
+            gridGap: 16,
+            gridTemplateColumns: "auto min-content min-content",
+          }}
+        >
+          <InputField atom={fields.feature} component="input" />
+          <div style={{ width: 300 }}>
+            {index + 1 === count && (
+              <fieldset role="group">
+                <FreePositionAddButton />
+                <RemoveButton />
+              </fieldset>
+            )}
+          </div>
+        </div>
+      )}
+    </List>
+  );
+};
+```
+
+</Example>
+
 <Example  of={ListStories.EmptyRenderProp} >
 
 ```tsx
