docs(storybook): upgrade

--- a/src/Changelog.mdx
+++ b/src/Changelog.mdx
@@ -1,4 +1,4 @@
-import { Meta, Title, Markdown } from "@storybook/blocks";
+import { Meta, Title, Markdown } from "@storybook/addon-docs/blocks";
 import CHANGELOG from "../CHANGELOG.md?raw";
 
 <Meta title="Changelog" />
