--- a/src/components/list/Docs.mdx
+++ b/src/components/list/Docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas, Story, ArgTypes, Description } from "@storybook/blocks";
+import { Meta, Canvas, Story, ArgTypes, Description } from "@storybook/addon-docs/blocks";
 import { Example } from "../../../.storybook/blocks/Example";
 import * as ListStories from "./List.stories";
 import * as ListItemStories from "./item/Item.stories";
