--- a/src/components/Docs.mdx
+++ b/src/components/Docs.mdx
@@ -227,37 +227,39 @@ const Example = () => {
 
 ```tsx
 import { fieldAtom, InputField } from "form-atoms";
-import { List, listAtom } from "@form-atoms/list-atom";
+import { createList, listAtom } from "@form-atoms/list-atom";
 
 const hobbies = listAtom({
   value: [{ hobby: "quality materials used" }, { hobby: "not so heavy" }],
   fields: ({ hobby }) => ({ hobby: fieldAtom({ value: hobby }) }),
 });
 
-// BEST PRACTICE: define your component statically. Avoid inline definitions when specifying props.
-// NOTE: The `Empty` prop does not accept any props
-const NoHobbiesCard = () => (
-  <article>
-    <p style={{ textAlign: "center" }}>
-      You don't have any hobbies in your list. Start by adding your first one.
-    </p>
-  </article>
-);
+const { List } = createList(hobbies);
 
 const Example = () => (
-  <List atom={hobbies} Empty={NoHobbiesCard}>
-    {({ fields, RemoveButton }) => (
-      <div
-        style={{
-          display: "grid",
-          gridGap: 16,
-          gridTemplateColumns: "auto min-content",
-        }}
-      >
-        <InputField atom={fields.hobby} component="input" />
-        <RemoveButton />
-      </div>
-    )}
+  <List atom={hobbies}>
+    <List.Empty>
+      <article>
+        <p style={{ textAlign: "center" }}>
+          You don't have any hobbies in your list. Start by adding your first
+          one.
+        </p>
+      </article>
+    </List.Empty>
+    <List.Item>
+      {({ fields, RemoveButton }) => (
+        <div
+          style={{
+            display: "grid",
+            gridGap: 16,
+            gridTemplateColumns: "auto min-content",
+          }}
+        >
+          <InputField atom={fields.hobby} component="input" />
+          <RemoveButton />
+        </div>
+      )}
+    </List.Item>
   </List>
 );
 ```
@@ -268,7 +270,7 @@ const Example = () => (
 
 ```tsx
 import { fieldAtom, InputField } from "form-atoms";
-import { List, listAtom } from "@form-atoms/list-atom";
+import { createList, listAtom } from "@form-atoms/list-atom";
 
 const hobbies = listAtom({
   value: [],
@@ -276,27 +278,32 @@ const hobbies = listAtom({
   fields: ({ hobby }) => ({ hobby: fieldAtom({ value: hobby }) }),
 });
 
+const { List } = createList(hobbies);
+
 const Example = () => (
   <List
-    atom={hobbies}
     initialValue={[
       { hobby: "coding" },
       { hobby: "gardening" },
       { hobby: "mountain bike" },
     ]}
   >
-    {({ fields, moveUp, moveDown, RemoveButton }) => (
-      <fieldset role="group">
-        <InputField atom={fields.hobby} component="input" />
-        <button type="button" className="outline" onClick={moveUp}>
-          Up
-        </button>
-        <button type="button" className="outline" onClick={moveDown}>
-          Down
-        </button>
-        <RemoveButton />
-      </fieldset>
-    )}
+    <List.Item>
+      {({ fields, moveUp, moveDown, remove }) => (
+        <fieldset role="group">
+          <InputField atom={fields.hobby} component="input" />
+          <button type="button" className="outline" onClick={moveUp}>
+            Up
+          </button>
+          <button type="button" className="outline" onClick={moveDown}>
+            Down
+          </button>
+          <button type="button" className="outline secondary" onClick={remove}>
+            Remove
+          </button>
+        </fieldset>
+      )}
+    </List.Item>
   </List>
 );
 ```
@@ -307,7 +314,7 @@ const Example = () => (
 
 ```tsx
 import { fieldAtom, InputField } from "form-atoms";
-import { List, listAtom } from "@form-atoms/list-atom";
+import { createList, listAtom } from "@form-atoms/list-atom";
 
 const hobbies = listAtom({
   value: [],
@@ -315,24 +322,29 @@ const hobbies = listAtom({
   fields: ({ hobby }) => ({ hobby: fieldAtom({ value: hobby }) }),
 });
 
+const { List } = createList(hobbies);
+
 const Example = () => (
   <List
-    atom={hobbies}
     initialValue={[
       { hobby: "swimming" },
       { hobby: "gardening" },
       { hobby: "coding" },
     ]}
   >
-    {({ fields, RemoveButton, add, item }) => (
-      <fieldset role="group">
-        <InputField atom={fields.hobby} component="input" />
-        <button type="button" className="outline" onClick={() => add(item)}>
-          Prepend
-        </button>
-        <RemoveButton />
-      </fieldset>
-    )}
+    <List.Item>
+      {({ fields, add, item, remove }) => (
+        <fieldset role="group">
+          <InputField atom={fields.hobby} component="input" />
+          <button type="button" className="outline" onClick={() => add(item)}>
+            Prepend
+          </button>
+          <button type="button" className="outline secondary" onClick={remove}>
+            Remove
+          </button>
+        </fieldset>
+      )}
+    </List.Item>
   </List>
 );
 ```
@@ -345,7 +357,7 @@ const Example = () => (
 
 ```tsx
 import { fieldAtom, InputField } from "form-atoms";
-import { listField, List } from "@form-atoms/list-atom";
+import { createList, listAtom } from "@form-atoms/list-atom";
 
 const users = listAtom({
   name: "users",
@@ -367,97 +379,110 @@ const users = listAtom({
   }),
 });
 
+const { List } = createList(users);
+
 const NestedListExample = () => {
   return (
-    <List
-      atom={users}
-      AddButton={({ add }) => (
-        <button type="button" className="outline" onClick={add}>
-          Add Person
-        </button>
-      )}
-    >
-      {({ fields, index, remove }) => (
-        <article>
-          <header>
-            <nav>
-              <ul>
-                <li>
-                  <strong>Person #{index + 1}</strong>
-                </li>
-              </ul>
-              <ul>
-                <li>
-                  <a
-                    href="#"
-                    role="button"
-                    className="outline secondary"
-                    onClick={(e) => {
-                      e.preventDefault();
-                      remove();
-                    }}
-                  >
-                    Remove
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </header>
-          <div className="grid">
-            <div>
-              <FieldLabel field={fields.name} label="First Name" />
-              <InputField
-                atom={fields.name}
-                render={(props) => <input {...props} placeholder="Name" />}
-              />
+    <List>
+      <List.Item>
+        {({ fields, index, remove }) => (
+          <article>
+            <header>
+              <nav>
+                <ul>
+                  <li>
+                    <strong>Person #{index + 1}</strong>
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    <a
+                      href="#"
+                      role="button"
+                      className="outline secondary"
+                      onClick={(e) => {
+                        e.preventDefault();
+                        remove();
+                      }}
+                    >
+                      Remove
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </header>
+            <div className="grid">
+              <div>
+                <FieldLabel field={fields.name} label="First Name" />
+                <InputField
+                  atom={fields.name}
+                  render={(props) => <input {...props} placeholder="Name" />}
+                />
+              </div>
+              <div>
+                <FieldLabel field={fields.lastName} label="Last Name" />
+                <InputField
+                  atom={fields.lastName}
+                  render={(props) => (
+                    <input {...props} placeholder="Last Name" />
+                  )}
+                />
+              </div>
             </div>
-            <div>
-              <FieldLabel field={fields.lastName} label="Last Name" />
-              <InputField
-                atom={fields.lastName}
-                render={(props) => <input {...props} placeholder="Last Name" />}
-              />
-            </div>
-          </div>
-          <List
-            atom={fields.accounts}
-            AddButton={({ add }) => (
-              <button type="button" className="outline" onClick={add}>
-                Add Bank Account
-              </button>
-            )}
-            RemoveButton={RemoveButton}
-          >
-            {({ fields, index, RemoveButton: RemoveIban }) => (
-              <>
-                <label>Account #{index + 1}</label>
-                <div
-                  style={{
-                    display: "grid",
-                    gridGap: 16,
-                    gridTemplateColumns: "auto min-content",
-                  }}
-                >
-                  <InputField
-                    atom={fields.iban}
-                    render={(props) => <input {...props} placeholder="IBAN" />}
-                  />
-                  <RemoveIban />
-                </div>
-              </>
-            )}
-          </List>
-        </article>
-      )}
+            <List.Nested atom={fields.accounts}>
+              {({ List }) => (
+                <>
+                  <List.Item>
+                    {({ fields, index, remove }) => (
+                      <>
+                        <label>Account #{index + 1}</label>
+                        <div
+                          style={{
+                            display: "grid",
+                            gridGap: 16,
+                            gridTemplateColumns: "auto min-content",
+                          }}
+                        >
+                          <InputField
+                            atom={fields.iban}
+                            render={(props) => (
+                              <input {...props} placeholder="IBAN" />
+                            )}
+                          />
+                          <button
+                            type="button"
+                            className="outline secondary"
+                            onClick={remove}
+                          >
+                            Remove Account
+                          </button>
+                        </div>
+                      </>
+                    )}
+                  </List.Item>
+                  <List.Add>
+                    {({ add }) => (
+                      <button type="button" className="outline" onClick={add}>
+                        Add Bank Account
+                      </button>
+                    )}
+                  </List.Add>
+                </>
+              )}
+            </List.Nested>
+          </article>
+        )}
+      </List.Item>
+      <List.Add>
+        {({ add }) => (
+          <button type="button" className="outline" onClick={add}>
+            Add Person
+          </button>
+        )}
+      </List.Add>
     </List>
   );
 };
-
-const RemoveButton = ({ remove }: RemoveButtonProps) => (
-  <button type="button" className="outline secondary" onClick={remove}>
-    Remove
-  </button>
-);
 ```
 
 </Example>
@@ -466,7 +491,7 @@ const RemoveButton = ({ remove }: RemoveButtonProps) => (
 
 ```tsx
 import { fieldAtom, InputField, useFieldActions } from "form-atoms";
-import { listField, List, type AddButtonProps } from "@form-atoms/list-atom";
+import { listField, createList } from "@form-atoms/list-atom";
 
 const environmentListAtom = listAtom({
   name: "environment",
@@ -480,17 +505,16 @@ const environmentListAtom = listAtom({
   }),
 });
 
-const ProgrammaticControls = ({ add }: AddButtonProps) => {
+const { List } = createList(environmentListAtom);
+
+const ProgrammaticControls = () => {
   /**
    * listAtom is fieldAtom, so any useField* hooks work:
    */
   const actions = useFieldActions(environmentListAtom);
 
   return (
-    <section className="grid">
-      <button type="button" className="outline" onClick={() => add()}>
-        New variable
-      </button>
+    <>
       <button
         type="button"
         className="outline secondary"
@@ -514,51 +538,67 @@ const ProgrammaticControls = ({ add }: AddButtonProps) => {
       >
         Set values from .env file
       </button>
-    </section>
+    </>
   );
 };
 
 const ProgrammaticallySetValueExample = () => {
   return (
-    <List atom={environmentListAtom} AddButton={ProgrammaticControls}>
-      {({ fields, RemoveButton }) => (
-        <div
-          style={{
-            display: "grid",
-            gridGap: 16,
-            gridTemplateColumns: "auto auto min-content",
-          }}
-        >
-          <div>
-            <InputField
-              atom={fields.variable}
-              render={(props) => (
-                <input {...props} placeholder="Variable Name" />
-              )}
-            />
+    <List>
+      <List.Item>
+        {({ fields, remove }) => (
+          <div
+            style={{
+              display: "grid",
+              gridGap: 16,
+              gridTemplateColumns: "auto auto min-content",
+            }}
+          >
+            <div>
+              <InputField
+                atom={fields.variable}
+                render={(props) => (
+                  <input {...props} placeholder="Variable Name" />
+                )}
+              />
+            </div>
+            <div>
+              <InputField
+                atom={fields.value}
+                render={(props) => (
+                  <input {...props} placeholder="Variable Value" />
+                )}
+              />
+            </div>
+            <div>
+              <button
+                type="button"
+                className="outline secondary"
+                onClick={remove}
+              >
+                Remove
+              </button>
+            </div>
           </div>
-          <div>
-            <InputField
-              atom={fields.value}
-              render={(props) => (
-                <input {...props} placeholder="Variable Value" />
-              )}
-            />
-          </div>
-          <div>
-            <RemoveButton />
-          </div>
-        </div>
-      )}
+        )}
+      </List.Item>
+      <section className="grid">
+        <List.Add>
+          {({ add }) => (
+            <button
+              type="button"
+              className="outline"
+              onClick={() => actions.add()}
+            >
+              New variable
+            </button>
+          )}
+        </List.Add>
+        <ProgrammaticControls />
+      </section>
     </List>
   );
 };
-
-const RemoveButton = ({ remove }: RemoveButtonProps) => (
-  <button type="button" className="outline secondary" onClick={remove}>
-    Remove
-  </button>
-);
 ```
 
 </Example>
@@ -567,7 +607,7 @@ const RemoveButton = ({ remove }: RemoveButtonProps) => (
 
 ```tsx
 import { fieldAtom, InputField } from "form-atoms";
-import { List, listAtom } from "@form-atoms/list-atom";
+import { createList, listAtom } from "@form-atoms/list-atom";
 
 const levels = listAtom({
   value: [],
@@ -598,10 +638,12 @@ const levels = listAtom({
   },
 });
 
+const { List } = createList(levels);
+
 const Example = () => (
-  <>
-    <List atom={levels} initialValue={[10, 30, 20].map((level) => ({ level }))}>
-      {({ fields, moveUp, moveDown, RemoveButton }) => (
+  <List initialValue={[10, 30, 20].map((level) => ({ level }))}>
+    <List.Item>
+      {({ fields, moveUp, moveDown, remove }) => (
         <div
           style={{
             display: "grid",
@@ -616,12 +658,14 @@ const Example = () => (
           <button type="button" className="outline" onClick={moveDown}>
             Down
           </button>
-          <RemoveButton />
+          <button type="button" className="outline secondary" onClick={remove}>
+            Remove
+          </button>
         </div>
       )}
-    </List>
+    </List.Item>
     <FieldErrors atom={levels} />
-  </>
+  </List>
 );
 
 const FieldErrors = ({ atom }: { atom: FieldAtom<any> }) => {
