--- a/src/components/Docs.mdx
+++ b/src/components/Docs.mdx
@@ -95,13 +95,7 @@ const Example = () => (
         </div>
       )}
     </List.Item>
-    <List.Add>
-      {({ add }) => (
-        <button type="button" className="secondary" onClick={add}>
-          Add environment variable
-        </button>
-      )}
-    </List.Add>
+    <List.Add />
   </List>
 );
 ```
